--- version 1.1.6, February 2014

Final touches for submission to JSS

--- version 1.1.5, February 2014

Updated to reflect changes in igraph
Changes in vignette
Changes in default method pathInc (overlap)

--- version 1.1.4, December 2012

Class changes to BasicRaster
Change from igraph0 to igraph 6
Change in as(x, "transitionMatrix") to speed up transition()
Update to the new adjacent method in raster

--- version 1.1.3, April 2012

Further adapting to naming changes in raster ("x" argument)
Making the same change in gdistance ("x" is the first argument in any function)
Bug fix in resistanceDistance: uncomment reproject
Improved documentation of definitions of different distance functions
Dependency on igraph0 -- to be changed to igraph 0.6 after May 31, 2012
Removed initialize functions, using prototypes instead

--- version 1.1.2, September 2011

Bug fix in transition(transitionFunction="barriers")
Methods added in transition()
Summary functions redefined
Adapting to changes in raster package (argument for Raster* objects is now always "x")
adjacencyFromTransition added